# projeto_banco

./: Dockerfile  compose.yaml  entrypoint.sh  pyproject.toml
.github/workflows/: pipeline.yaml
migrations/: env.py
migrations/versions/: 3109278edce2_add_table_transactions.py  4d53f75112f3_remove_contranct_unique_on_table_conta_.py  657438d8095e_alter_phone_number_of_int_for_bigint.py  7360b0d8200a_add_table_users.py  87aa5a46a36f_add_table_bank.py  8c9d7e1765cc_add_new_table_clientes_e_table_users.py  a243479ed020_create_user_table.py  c05b8c9e06e4_add_table_conta.py
src/: app.py  database.py  deps.py  exceptions.py  security.py  settings.py
src/models/: __init__.py  accounts.py  acounts.py  banks.py  clients.py  transactions.py  users.py
src/routers/: __init__.py  accounts.py  banks.py  clients.py  token.py  transactions.py  users.py
src/schemas/: accounts.py  banks.py  transactions.py  users.py
src/services/: account_service.py
src/views/: accounts.py  banks.py  transactions.py  users.py
tests/: conftest.py  test_account.py  test_app.py  test_bank.py  test_db.py  test_security.py  test_token.py  test_transaction.py  test_user.py
