[project]
name = "projeto-banco"
version = "0.1.0"
description = "Projeto Bancário"
authors = [
    {name = "HugoRodrigues01",email = "hugo999junha@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.14,<4.0"
dependencies = [
    "fastapi[standard] (>=0.135.3,<0.136.0)",
    "uvicorn (>=0.44.0,<0.45.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "pyjwt (>=2.12.1,<3.0.0)",
    "pwdlib[argon2] (>=0.3.0,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "ruff (>=0.15.10,<0.16.0)",
    "typos (>=1.45.0,<2.0.0)"
]


[tool.ruff]
line-length = 79
extend-exclude = ["migrations"]

[tool.typos]
[files]
extend-exclude = ["htmlcov/**"]

[tool.ruff.lint]
preview = true
select = ["I", "F", "E", "W", "PL", "PT"]

[tool.pytest.ini_options]
pythonpath = "."
addopts = "-p no:warnings"


[tool.taskipy.tasks]
# pre_lint = "typos"
lint = "ruff check"
pre_format = "ruff check --fix"
format = "ruff format"
run = "uvicorn src.app:app --reload"
pre_test = "task lint"
test = "pytest --cov=src -vv"
post_test = "coverage html"         